--- a/app/styles/less/layout/taskmanager-modal.less
+++ b/app/styles/less/layout/taskmanager-modal.less
@@ -90,9 +90,3 @@
     height: 274px;
   }
 }
-
-.install-workflow > ol { padding-left: 0; }
-.install-workflow, .install-workflow ol { counter-reset: item }
-.install-workflow label { font-weight: normal; }
-.install-workflow li { display: block; }
-.install-workflow .counter:before { content: counters(item, ".") " "; counter-increment: item }
